--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -23,3 +23,13 @@
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
+
+:root {
+    --light-cream: #faf7f0;
+    --midnight: #050e2b;
+    --dark-blue: #080055;
+    --purple: #472e97;
+    --light-yellow: #edd69d;
+    --summer: #eeaa44;
+}
+
